--- a/app/src/main/res/layout/epic_photos_fragment.xml
+++ b/app/src/main/res/layout/epic_photos_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_bottom_epic_choose_date_tv"
-        android:layout_marginBottom="@dimen/margin_bottom_epic_choose_date_tv"
+        android:paddingBottom="@dimen/margin_bottom_epic_choose_date_tv"
         android:text="@string/tap_calendar_icon_and_choose_the_date"
         android:textColor="@color/light_black"
         android:fontFamily="@font/karla"
@@ -29,6 +29,7 @@
         android:layout_width="@dimen/view_width_for_constraint_percent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_baseline_edit_calendar_24"
+        android:paddingBottom="@dimen/notes_recycler_view_margin_top"
         app:layout_constraintEnd_toStartOf="@id/user_chosen_date_epic_tv"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/choose_epic_date_tv"
