--- a/app/src/main/res/layout/main_fragment_pod_loaded.xml
+++ b/app/src/main/res/layout/main_fragment_pod_loaded.xml
@@ -121,6 +121,7 @@
             android:layout_marginTop="@dimen/margin_top"
             android:text="@string/date_of_creation"
             android:textSize="@dimen/text_size"
+            android:paddingBottom="@dimen/epic_caption_padding"
             android:fontFamily="@font/karla"
             android:textColor="@color/grey_black"
             android:textStyle="normal"
@@ -138,7 +139,7 @@
             android:fontFamily="@font/karla"
             android:textColor="@color/light_black"
             android:textIsSelectable="true"
-            android:layout_marginStart="@dimen/epic_caption_padding"
+            android:layout_margin ="@dimen/epic_caption_padding"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/creationDate"
